feat(mens): mens product code before tests

--- a/dev/common/directives/cr-header/crHeader.jade
+++ b/dev/common/directives/cr-header/crHeader.jade
@@ -16,7 +16,7 @@ header
                li(ui-sref-active="active")
                   a(ui-sref="index") HOME 
                li(ui-sref-active="active")
-                  a(href="javascript:void(0)") MENS
+                  a(ui-sref="mens") MENS
                li(ui-sref-active="active")
                   a(href="javascript:void(0)") WOMENS
                li(ui-sref-active="active")
