--- a/dev/common/less/main.less
+++ b/dev/common/less/main.less
@@ -9,6 +9,10 @@ a, a:hover {
    }
 }
 
+img {
+   width: 100%;
+}
+
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
@@ -103,3 +107,43 @@ input[type="color"]:focus,
    padding-right: 0;
 }
 
+.widget-title {
+   text-transform: uppercase;
+   font-size: 1.230em;
+   margin-bottom: 15px;
+   margin-top: 0;
+   overflow: hidden;
+}
+
+.widget-title.text-center span {
+   padding-left: 20px;
+}
+
+.widget-title.text-center span:before {
+   content: "";
+   display: block;
+   width: 1000px;
+   height: 1px;
+   position: absolute;
+   top: 50%;
+   margin-top: -1px;
+   right: 100%;
+   background: #f1f1f1;
+}
+
+.widget-title span {
+   padding-right: 20px;
+   position: relative;
+}
+
+.widget-title span:after {
+   content: "";
+   display: block;
+   width: 1000px;
+   height: 1px;
+   position: absolute;
+   top: 50%;
+   margin-top: -1px;
+   left: 100%;
+   background: #f1f1f1;
+}
