feat(image): added favicon image

--- a/dev/app/_root/index.jade
+++ b/dev/app/_root/index.jade
@@ -3,6 +3,7 @@ html(ng-app="app")
    
    head
       title Crux
+      link(rel="shortcut icon" href="images/favicon/favicon.ico")
       meta(charset="utf-8")
       meta(name="viewport" content="width=device-width, initial-scale=1")
       link(href="css/app.css" rel="stylesheet")
