--- a/dev/app/_root/index.jade
+++ b/dev/app/_root/index.jade
@@ -5,7 +5,7 @@ html(ng-app="app")
       title Crux
       link(rel="shortcut icon" href="images/favicon/favicon.ico")
       meta(charset="utf-8")
-      meta(name="viewport" content="width=device-width, initial-scale=1")
+      meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1")
       link(href="css/app.css" rel="stylesheet")
       script(src="js/app.js")
 
